--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 asttokens==2.0.7
 atomicwrites==1.4.1
 attrs==22.1.0
+-e git+https://github.com/olliestanley/autoscout@664f551e8a23cc21a91886bb558d64b6d6357553#egg=autoscout
 backcall==0.2.0
 beautifulsoup4==4.11.1
 black==22.6.0
@@ -41,6 +42,7 @@ packaging==21.3
 pandas==1.4.3
 parso==0.8.3
 pathspec==0.9.0
+patsy==0.5.2
 pickleshare==0.7.5
 Pillow==9.2.0
 platformdirs==2.5.2
@@ -65,6 +67,7 @@ seaborn==0.11.2
 six==1.16.0
 soupsieve==2.3.2.post1
 stack-data==0.4.0
+statsmodels==0.13.2
 threadpoolctl==3.1.0
 tomli==2.0.1
 tornado==6.2
